# alx

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: cli.rs  command.rs  error.rs  main.rs
src/alias/: mod.rs  store.rs  validator.rs
src/config/: manager.rs  mod.rs
src/shell/: bash.rs  detector.rs  fish.rs  mod.rs  zsh.rs
