[package]
authors = ["hiro08gh <hiro08gh@gmail.com>"]
name = "alx"
description = "Setup simple alias manager"
version = "0.1.0"
license = "MIT"
categories = ["command-line-utilities"]
repository = "https://github.com/hiro08gh/alx"
edition = "2024"

[[bin]]
name = "alx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.17"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.8"